# meeting-app-Join.To.IT-

./: Makefile  README  README.md  meeting.db  pyproject.toml  requirements.txt  tzkjqaug
docker/: Dockerfile  app.yaml  storages.yaml
src/: container.py  main.py
src/adapters/: email.py  orm.py  repository.py  uow.py
src/adapters/db/: db_manager.py
src/common/: schemas.py  security.py
src/config/: base_config.py  db_config.py  email_config.py  event_registration_template.html
src/db/: db_manager.py
src/events/: orm.py  repository.py  schemas.py  service.py  uow.py
src/events/exceptions/: event_exc_handler.py  event_exceptions.py
src/events/routers/: event_reg_routers.py  event_routers.py
src/users/: auth_service.py  orm.py  repository.py  schemas.py  service.py  uow.py  utils.py
src/users/exceptions/: auth_exc_handler.py  auth_exceptions.py  user_exc_handler.py  user_exceptions.py
src/users/routers/: auth_routers.py  users_routers.py
